caipe/workshop/vault/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
    - host: vault.cnoe.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
    - host: localhost
      http:
        paths:
          - path: /vault(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vault
                port:
                  number: 8200
